<resources>
    <string name="app_name">Confidential Notes Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="sign_in_anonymously">Sign in anonymously</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_">Sign Up</string>
    <string name="or">OR</string>
    <string name="names">Names</string>
    <string name="repeat_password">Repeat password</string>
    <string name="time">20:00pm</string>
    <string name="title"><u>Title</u></string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="note_">Notes</string>
    <string name="user_profile">User Profile</string>
    <string name="delete_user">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="phone_number">phone</string>
    <string name="gender">gender</string>
    <string name="delete_account">Delete account</string>
    <string name="reset">Reset</string>
    <string name="note_users">users</string>
    <string name="user_image">image</string>
    <string name="user_name">user_name</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

</resources>