<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:iconTint="#EFE711"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"
        android:icon="@drawable/ic_logout" />

    <item android:icon="@drawable/ic_settings"
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item app:showAsAction="never"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/delete_user"
        android:id="@+id/profile_delete" />

</menu>