<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.profile.ProfileUpdateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="150dp"
            app:cardElevation="10dp"
            app:civ_border_color="#FF000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_user_profile" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_user_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/names"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="@id/profile_image_card"
            app:layout_constraintStart_toStartOf="@id/profile_image_card"
            app:layout_constraintTop_toBottomOf="@id/profile_image_card">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tif_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/select_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image_card"
            app:layout_constraintEnd_toEndOf="@+id/profile_image_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_user_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/phone_number"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tif_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone_number"
                android:drawablePadding="5dp"
                android:drawableTint="@color/purple_700"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            app:helperTextTextColor="#F33535"
            app:layout_constraintEnd_toEndOf="@+id/tf_user_phone"
            app:layout_constraintStart_toStartOf="@+id/tf_user_phone"
            app:layout_constraintTop_toBottomOf="@id/tf_user_phone">

            <AutoCompleteTextView
                android:id="@+id/ti_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Update profile"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/tf_gender"
            app:layout_constraintStart_toStartOf="@+id/tf_gender"
            app:layout_constraintTop_toBottomOf="@+id/tf_gender" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>